force-app/main/default/objects/Account/fields/Both_addresses_are_same__c.field-meta.xml
<CustomField>
    <fullName>Both_addresses_are_same__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Both addresses are same??</description>
    <label>Both addresses are same</label>
    <type>Checkbox</type>
</CustomField>