force-app/main/default/objects/Account/fields/Places__c.field-meta.xml
<CustomField>
    <fullName>Places__c</fullName>
    <label>Places</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>