force-app/main/default/objects/Account/recordTypes/Existing_Customer_Type.recordType-meta.xml
<RecordType>
    <fullName>Existing_Customer_Type</fullName>
    <active>true</active>
    <description>Existing Customer Type</description>
    <label>Existing Customer Type</label>
</RecordType>