force-app/main/default/objects/Account/recordTypes/New_Customer_Type.recordType-meta.xml
<RecordType>
    <fullName>New_Customer_Type</fullName>
    <active>true</active>
    <description>New Customer Type</description>
    <label>New Customer Type</label>
</RecordType>