force-app/main/default/objects/Account/validationRules/Account_Name_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_cannot_be_changed</fullName>
    <active>false</active>
    <description>Account Name cannot be changed</description>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Name cannot be changed</errorMessage>
</ValidationRule>