force-app/main/default/objects/Account/validationRules/Account_Rating_field_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Rating_field_is_required</fullName>
    <active>false</active>
    <description>Account Rating field is required</description>
    <errorConditionFormula>ISBLANK( TEXT(  Type ) )</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Please select Type for the customer</errorMessage>
</ValidationRule>