force-app/main/default/objects/Account/validationRules/Cannot_change_Rating_from_Cold_to_Hot.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Rating_from_Cold_to_Hot</fullName>
    <active>false</active>
    <description>Cannot change Rating from Cold to Hot</description>
    <errorConditionFormula>AND(
     ispickval(Rating,&apos;Hot&apos;),
     ispickval( PRIORVALUE(Rating), &apos;Cold&apos;)
)</errorConditionFormula>
    <errorDisplayField>Rating</errorDisplayField>
    <errorMessage>Cannot change Rating from Cold to Hot</errorMessage>
</ValidationRule>