force-app/main/default/objects/Account/validationRules/Make_AccountSite_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_AccountSite_Field_Required</fullName>
    <active>false</active>
    <description>This rule is used to make AccountSite field required</description>
    <errorConditionFormula>ISBLANK( Site )</errorConditionFormula>
    <errorMessage>Please enter  &apos;Account Site&apos; value</errorMessage>
</ValidationRule>