force-app/main/default/objects/Account/validationRules/New_account_should_be_active.validationRule-meta.xml
<ValidationRule>
    <fullName>New_account_should_be_active</fullName>
    <active>false</active>
    <description>New account should be active</description>
    <errorConditionFormula>AND(
      isnew() ,
      NOT ispickval( Active__c , &apos;Yes&apos;)
    )</errorConditionFormula>
    <errorDisplayField>Active__c</errorDisplayField>
    <errorMessage>Newly created accounts should be in Active Status</errorMessage>
</ValidationRule>