force-app/main/default/objects/Account/validationRules/Rating_is_hot_for_Banking_Industry.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_is_hot_for_Banking_Industry</fullName>
    <active>false</active>
    <description>Rating is hot for Banking Industry</description>
    <errorConditionFormula>AND(
       ISPICKVAL(Industry, &apos;Banking&apos; ), 
       NOT ISPICKVAL( Rating, &apos;Hot&apos; )
   )</errorConditionFormula>
    <errorDisplayField>Rating</errorDisplayField>
    <errorMessage>Rating should be HOT when the Industry is &apos;Banking&apos;</errorMessage>
</ValidationRule>