force-app/main/default/objects/Account/listViews/Energy_Industry_Customers.listView-meta.xml
<ListView>
    <fullName>Energy_Industry_Customers</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.OWNERSHIP</columns>
    <columns>ACCOUNT.SALES</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.PHONE2</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Energy</value>
    </filters>
    <filters>
        <field>ACCOUNT.SALES</field>
        <operation>greaterThan</operation>
        <value>1000000</value>
    </filters>
    <label>Energy Industry Customers</label>
</ListView>